# python-labour-app

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  docker-compose.yml
docs/: er_diagrams.md
src/python_labour_app/: __init__.py
src/python_labour_app/analytics/: query_console.py
src/python_labour_app/db/: base.py  database_factory.py  models.py  postgres_factory.py  sqlite_factory.py
src/python_labour_app/db/factories/: __init__.py  database_factory.py
src/python_labour_app/db/models/: __init__.py  base.py  employee.py  models.py
src/python_labour_app/db/repositories/: __init__.py  employee_repository.py  repository.py
tests/db/: conftest.py  test_models.py
tests/db/factories/: __init__.py  test_postgres_factory.py  test_sqlite_factory.py
tests/db/models/: __init__.py  conftest.py  test_employee_model.py
tests/db/repositories/: __init__.py  conftest.py  mock_employee_repository.py  test_employee_repository.py
tests/integration/db/repositories/: test_employee_repository.py
