[project]
name = "python-labour-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rajdeep Sandhu", email = "168480080+rajdeep-sandhu@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
python-labour-app = "python_labour_app:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
